# Restaurants-Menu

Menu/: forms.py  models.py
REME/: pyvenv.cfg
REME/Scripts/: activate  activate.bat
Restaurants_Menu/: db.sqlite3  gunicornconf.txt  manage.py  nginxconf.txt  pyproject.toml  render.yaml  urls.py
Restaurants_Menu/Menu/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
Restaurants_Menu/Menu/migrations/: 0001_initial.py  0002_alter_user_managers.py  0002_menu.py  0003_alter_user_managers.py  0003_rename_food_type_menu_categories_menu_details.py  0004_alter_user_managers.py  0004_menu_image.py
Restaurants_Menu/Restaurants_Menu/: asgi.py  settings.py  urls.py  wsgi.py
Restaurants_Menu/Templates/: 404.html  base.html  edit.html  home.html  login.html  main.html  menuedit.html  profile.html  signup.html
Restaurants_Menu/Templates/registration/: login.html  signup.html
Templates/: edit.html  home.html  main.html  menuedit.html  signup.html  welcome.html
